--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body{
     -webkit-box-shadow: 0px 6px 9px 0px rgba(0,0,0,0.71);
     -moz-box-shadow: 0px 6px 9px 0px rgba(0,0,0,0.71);
     box-shadow: 0px 6px 9px 0px rgba(0,0,0,0.71);
+    border-radius: 10px;
 }
 h1,h2{
     font-family: var(--fuenteSecundaria);
@@ -59,7 +60,55 @@ form legend{
 legend span{
     font-size: 1rem;
     margin-top: 1rem;
+    margin-bottom: 2rem;
     clear: both;
     display: block;
+}
+@media (min-width:768px) {
+    .campos{
+        display: flex;
+        justify-content: space-between;
+    }
+    .campo{
+        flex: 0 0 calc(33.3% - 1rem);
+    }    
+}
+.campo{
+    padding: .5rem 0;
+}
+.campo label{
+    font-size: 1.2rem;
+}
+.campo input[type="tel"],
+.campo input[type="text"]{
+    width: 100%;
+    border: none;
+    padding: .5rem;
+    height: 3rem;
+    margin-top: .5rem;
+    font-size: 1.2rem;
+}
+.enviar{
+    display: flex;
+    justify-content: end;
+}
+.campo input[type="submit"]{
+    background-color: var(--primario);
+    border: none;
+    color: white;
+    padding: 1rem 4rem;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    transition: background-color .5s ease-in-out;
+    flex: 1;
+}
+.campo input[type="submit"]:hover{
+    background-color: var(--primarioOscuro);
+    cursor: pointer;
+}
+@media (min-width:768px) {
+    .campo input[type="submit"]{
+        flex: 0 0 auto;
+    }
 }
 
