--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,34 @@ body{
 }
 .bg-blanco{
     background-color: white;
-
 }
+.barra{
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    align-items: center;/*centra vertical*/
+}
+/* Botones */
+.btn{
+    font-size: 2rem;
+    text-decoration: none;
+}
+.btn-editar{
+    color: var(--secundario);
+}
+.btn-borrar{
+    color: var(--primario);
+}
+.volver{
+    background-color: var(--secundario);
+    border-radius: 5px;
+    text-align: center;
+    color: #000000;
+    font-weight: 700;
+    font-size: 1.2rem;
+    padding: .5rem;
+}
+
+
 .sombra{
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
@@ -173,14 +199,5 @@ legend span{
     background-color: transparent !important;
     border: none;
 }
-.btn{
-    font-size: 2rem;
-    text-decoration: none;
-}
-.btn-editar{
-    color: var(--secundario);
-}
-.btn-borrar{
-    color: var(--primario);
-}
+
 
